helm/manifests/mediaserver/plex.yaml
---
### StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex-media-server
  labels:
    name: plex-media-server
    app: plex-media-server
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/instance: plex-media-server
spec:
  serviceName: plex-media-server
  selector:
    matchLabels:
      app.kubernetes.io/name: plex-media-server
      app.kubernetes.io/instance: plex-media-server
  template:
    metadata:
      labels:
        app: plex-media-server
        app.kubernetes.io/name: plex-media-server
        app.kubernetes.io/instance: plex-media-server
    spec:
      serviceAccountName: plex-media-server
      volumes:
      - name: pms-transcode
        emptyDir: {}
      - name: dev-dri
        hostPath:
          path: /dev/dri
      - name: vol2
        hostPath:
          path: /mnt/vol2
      - name: vol3
        hostPath:
          path: /mnt/vol3
      - name: vol4
        hostPath:
          path: /mnt/vol4
      - name: vol5
        hostPath:
          path: /mnt/vol5
      - name: vol6
        hostPath:
          path: /mnt/vol6
      terminationGracePeriodSeconds: 120
      containers:
      - name: plex-media-server-pms
        image: index.docker.io/plexinc/pms-docker:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 32400
          name: plex
        - containerPort: 8324
          name: plex-roku
        - containerPort: 32469
          name: plex-dlna
        - containerPort: 1900
          name: plex-upnp
          protocol: UDP
        - containerPort: 32410
          name: plex-gdm-1
          protocol: UDP
        - containerPort: 32412
          name: plex-gdm-2
          protocol: UDP
        - containerPort: 32413
          name: plex-gdm-3
          protocol: UDP
        - containerPort: 32414
          name: plex-gdm-4
          protocol: UDP          
        volumeMounts:
        - name: pms-config
          mountPath: /config
        - name: pms-transcode
          mountPath: /transcode
        - name: dev-dri
          mountPath: /dev/dri
          readOnly: true
        - name: vol2
          mountPath: /Drive1
          readOnly: true
        - name: vol3
          mountPath: /Drive2
          readOnly: true
        - name: vol4
          mountPath: /Drive3
          readOnly: true
        - name: vol5
          mountPath: /Drive4
          readOnly: true         
        - name: vol6
          mountPath: /Drive5
          readOnly: true
  volumeClaimTemplates:
  - metadata:
      name: pms-config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
### Service
apiVersion: v1
kind: Service
metadata:
  name: plex-media-server-lb
  labels:
    app: plex-media-server
    app.kubernetes.io/name: plex-media-server-lb
    app.kubernetes.io/instance: plex-media-server-lb
spec:
  type: LoadBalancer
  loadBalancerIP: 10.23.1.249 
  ports:
  - port: 32400
    targetPort: plex
    name: plex
  - port: 8324
    targetPort: plex-roku
    name: plex-roku
  - port: 32469
    targetPort: plex-dlna
    name: plex-dlna
  - port: 1900
    targetPort: plex-upnp
    name: plex-upnp
    protocol: UDP
  - port: 32410
    targetPort: plex-gdm-1
    name: plex-gdm-1
    protocol: UDP
  - port: 32412
    targetPort: plex-gdm-2
    name: plex-gdm-2
    protocol: UDP
  - port: 32413
    targetPort: plex-gdm-3
    name: plex-gdm-3
    protocol: UDP
  - port: 32414
    targetPort: plex-gdm-4
    name: plex-gdm-4
    protocol: UDP
  selector:
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/instance: plex-media-server
---
apiVersion: v1
kind: Service
metadata:
  name: plex-media-server
  labels:
    app: plex-media-server
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/instance: plex-media-server
spec:
  type: ClusterIP
  ports:
    - port: 32400
      targetPort: plex
      name: plex
  selector:
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/instance: plex-media-server
---
### Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-media-server-ingress
  labels:
    name: plex-media-server-ingress
    app: plex-media-server
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/instance: plex-media-server
spec:
  ingressClassName: nginx-internal
  rules:
  - host: plex.home
    http:
      paths:
      - path: '/'
        pathType: Prefix
        backend:
          service:
            name: plex-media-server
            port:
              number: 32400
  tls:
  - hosts:
    - plex.home
    secretName: plex-media-server-ingress-lets-encrypt
